kubernetes/gitops/flux-notification-controller-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-notification-controller
  namespace: flux-system
spec:
  rules:
    - host: flux.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  name: http
